erDiagram
  CURRENCIES {
    string code PK
    string name
    string symbol
    int minor_unit
  }

  USERS {
    uuid id PK
    string email
    datetime created_at
    datetime last_seen_at
  }

  BUDGETS {
    uuid id PK
    string name
    uuid owner_user_id FK
    string base_currency_code FK
    datetime created_at
  }

  BUDGET_MEMBERS {
    uuid id PK
    uuid budget_id FK
    uuid user_id FK
    datetime created_at
  }
  %% INDEXES
  %% ix_budget_members_user_id (user_id)
  %% ix_budget_members_budget_id (budget_id)

  ACCOUNTS {
    uuid id PK
    uuid budget_id FK
    string name
    string type
    string currency_code FK
    bool is_active
    datetime created_at
  }
  %% INDEXES
  %% ix_accounts_budget_id (budget_id)

  CATEGORIES {
    uuid id PK
    uuid budget_id FK
    string name
    uuid parent_id FK
    bool is_archived
    int sort_order
  }
  %% INDEXES
  %% ix_categories_budget_id (budget_id)
  %% ix_categories_parent_id (parent_id)

  PAYEES {
    uuid id PK
    uuid budget_id FK
    string name
  }
  %% INDEXES
  %% ix_payees_budget_id (budget_id)

  TRANSACTIONS {
    uuid id PK
    uuid budget_id FK
    datetime posted_at
    string status
    string notes
    string import_id
    datetime created_at
  }
  %% INDEXES
  %% ix_transactions_budget_posted_created_id (budget_id, posted_at desc, created_at desc, id desc)

  TRANSACTION_LINES {
    uuid id PK
    uuid transaction_id FK
    uuid account_id FK
    uuid category_id FK
    uuid payee_id FK
    int amount_minor
    string memo
  }
  %% INDEXES
  %% ix_transaction_lines_transaction_id (transaction_id)
  %% ix_transaction_lines_account_id (account_id)
  %% ix_transaction_lines_category_id (category_id)
  %% ix_transaction_lines_payee_id (payee_id)

  TAGS {
    uuid id PK
    uuid budget_id FK
    string name
  }
  %% INDEXES
  %% ix_tags_budget_id (budget_id)

  TRANSACTION_LINE_TAGS {
    uuid line_id PK, FK
    uuid tag_id PK, FK
    datetime created_at
  }
  %% INDEXES
  %% ix_transaction_line_tags_tag_id (tag_id)

  CURRENCIES ||--o{ BUDGETS : base_currency_code
  CURRENCIES ||--o{ ACCOUNTS : currency_code

  USERS ||--o{ BUDGET_MEMBERS : user_id
  BUDGETS ||--o{ BUDGET_MEMBERS : budget_id

  USERS ||--o{ BUDGETS : owner_user_id

  BUDGETS ||--o{ ACCOUNTS : budget_id
  BUDGETS ||--o{ CATEGORIES : budget_id
  BUDGETS ||--o{ PAYEES : budget_id
  BUDGETS ||--o{ TRANSACTIONS : budget_id
  BUDGETS ||--o{ TAGS : budget_id

  CATEGORIES ||--o{ CATEGORIES : parent_id

  TRANSACTIONS ||--o{ TRANSACTION_LINES : transaction_id
  ACCOUNTS ||--o{ TRANSACTION_LINES : account_id
  CATEGORIES ||--o{ TRANSACTION_LINES : category_id
  PAYEES ||--o{ TRANSACTION_LINES : payee_id

  TRANSACTION_LINES ||--o{ TRANSACTION_LINE_TAGS : line_id
  TAGS ||--o{ TRANSACTION_LINE_TAGS : tag_id
